--- a/cpp00/ex01/Makefile
+++ b/cpp00/ex01/Makefile
@@ -1,5 +1,5 @@
 NAME = Phonebook
-SRCS = ex01.cpp PhoneBook.cpp
+SRCS = ex01.cpp PhoneBook.cpp Contact.cpp
 CC = c++
 FLAGS = -Wall -Werror -Wextra
 
