cpp01 properly working

--- a/cpp01/ex01/Makefile
+++ b/cpp01/ex01/Makefile
@@ -1,5 +1,5 @@
 NAME = Zombie
-SRCS = Zombie.cpp zombieHorde.cpp main.cpp 
+SRCS = Zombie.cpp ZombieHorde.cpp main.cpp 
 CC = c++
 FLAGS = -Wall -Werror -Wextra
 
