--- a/cpp03/ex02/Makefile
+++ b/cpp03/ex02/Makefile
@@ -1,7 +1,7 @@
-NAME = Fixed
-SRCS = Fixed.cpp main.cpp 
+NAME = FragTrap
+SRCS = ClapTrap.cpp FragTrap.cpp main.cpp 
 CC = c++
-FLAGS = -Wall -Werror -Wextra
+FLAGS = -Wall -Werror -Wextra -std=c++98
 
 $(NAME) :
 	$(CC) $(FLAGS) $(SRCS) -o $(NAME)
