--- a/cpp06/ex00/Makefile
+++ b/cpp06/ex00/Makefile
@@ -1,5 +1,5 @@
-NAME = Bureaucrat
-SRCS = Bureaucrat.cpp main.cpp 
+NAME = Scalar
+SRCS = Scalar.cpp main.cpp 
 CC = c++
 FLAGS = -Wall -Werror -Wextra -std=c++98
 
