--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,5 +48,7 @@
         "streambuf": "cpp",
         "cinttypes": "cpp",
         "typeinfo": "cpp"
-    }
+    },
+    "files.autoSave": "onFocusChange",
+    "editor.fontSize": 14
 }
